--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@ h3{
     <br>
     <input type="number" name="p" class="number" placeholder="شماره همراه">
     <br>
-    <input class="button" type="submit" value="login">
+    <input class="button" type="submit" value="بعدی">
 </body>
 </html>
